--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
       </div>
       <div class="flashy-shadow">
         <svg viewBox="0 0 100 50" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-            <ellipse cx="50" cy="25" rx="40" ry="10" style="fill:#09C399;" />
+            <ellipse cx="50" cy="25" rx="40" ry="10" style="fill:#ac8d10;" />
         </svg>
       </div>
       <div class="text">
@@ -89,7 +89,7 @@
                     fill: white;
                 }
             </style>
-            <text x="30" y="22" class="small">Wick Editor</text>
+            <text x="15" y="22" class="small">Wick Editor In9</text>
         </svg>
       </div>
     </div>
